force-app/main/default/objects/MDU_Project__c/MDU_Project__c.object-meta.xml
<CustomObject>
    <description>Represents an overall MDU deployment initiative. (PVFSL-891)</description>
    <label>MDU Project</label>
    <nameField>
        <label>MDU Project Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>MDU Projects</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>