force-app/main/default/objects/MDU_Project__c/fields/Address__c.field-meta.xml
<CustomField>
    <fullName>Address__c</fullName>
    <description>Address of the project. (PVFSL-891)</description>
    <label>Address</label>
    <type>Address</type>
</CustomField>