force-app/main/default/objects/MDU_Project__c/fields/Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Start_Date__c</fullName>
    <description>Start date of the project. (PVFSL-891)</description>
    <label>Start Date</label>
    <type>Date</type>
</CustomField>